--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="./assets/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <title>Zalo Extensions</title>
+  <title>Zalo Cookies</title>
 </head>
 
 <body>
   <div class="container">
     <header class="header">
       <img src="./assets/logo.png" alt="Kaguya" class="logo" />
-      <h1>Zalo Extensions</h1>
+      <h1>Zalo Cookies</h1>
     </header>
 
 
